# Operit2

./: .gitignore
apps/flutter/native/operit-flutter-bridge/: Cargo.toml
apps/flutter/native/operit-flutter-bridge/src/: access.rs  lib.rs  mdnss.rs
core/: Cargo.toml
core/crates/operit-cli/: Cargo.toml
core/crates/operit-cli/src/: main.rs
core/crates/operit-command-core/: Cargo.toml
core/crates/operit-command-core/src/commands/: chat.rs  memory.rs  mod.rs  model.rs  people.rs  skill.rs  tool.rs  workspace.rs
core/crates/operit-host-api/src/: lib.rs
core/crates/operit-link/: Cargo.toml
core/crates/operit-link/src/: http.rs  lib.rs  remote.rs
core/crates/operit-runtime/: Cargo.toml  build.rs
core/crates/operit-runtime/src/: R.rs  lib.rs
core/crates/operit-runtime/src/api/chat/: AIForegroundService.rs  ChatRuntimeHolder.rs  ChatRuntimeSlot.rs  EnhancedAIService.rs  mod.rs
core/crates/operit-runtime/src/core/: mod.rs
core/crates/operit-runtime/src/core/application/: ActivityLifecycleManager.rs  ForegroundServiceCompat.rs  OperitApplication.rs  OperitApplicationContext.rs  mod.rs
core/crates/operit-runtime/src/core/avatar/: mod.rs
core/crates/operit-runtime/src/core/chat/: AIMessageManager.rs  mod.rs
core/crates/operit-runtime/src/core/config/: FunctionalPrompts.rs  SystemPromptConfig.rs  SystemToolPrompts.rs  SystemToolPromptsInternal.rs  mod.rs
core/crates/operit-runtime/src/core/files/: PathMapper.rs  VisualFileSystem.rs  mod.rs
core/crates/operit-runtime/src/core/tools/: AIToolHandler.rs  AIToolHook.rs  ToolExecutionLimits.rs  ToolPackage.rs  ToolProgressBus.rs  ToolRegistration.rs  ToolResultDataClasses.rs  mod.rs
core/crates/operit-runtime/src/data/: mod.rs
core/crates/operit-runtime/src/data/collects/: ModelCatalog.rs
core/crates/operit-runtime/src/data/dao/: ChatDao.rs  MessageDao.rs  MessageVariantDao.rs  mod.rs
core/crates/operit-runtime/src/data/db/: AppDatabase.rs  mod.rs
core/crates/operit-runtime/src/data/model/: AITool.rs  ActivePrompt.rs  AiReference.rs  ApiKeyInfo.rs  AttachmentInfo.rs  BillingMode.rs  CharacterCard.rs  CharacterCardChatStats.rs  CharacterGroupCard.rs  CharacterGroupChatStats.rs  ChatEntity.rs  ChatHistory.rs  ChatMessage.rs  ChatMessageDisplayMode.rs  ChatMessageLocatorPreview.rs  ChatMessageTimestampAllocator.rs  ChatTurnOptions.rs  CloudEmbeddingConfig.rs  CustomEmoji.rs  DocumentChunk.rs  DragonBones.rs  Embedding.rs  EmbeddingConverter.rs  EmbeddingDimensionUsage.rs  FunctionType.rs  InputProcessingState.rs  Memory.rs  MemoryAutoSaveCandidate.rs  MemoryExportModel.rs  MemorySearchConfig.rs  MemorySearchDebugInfo.rs  MessageEntity.rs  MessageVariantEntity.rs  ModelCatalog.rs  ModelConfigData.rs  ModelParameter.rs  OpenAIModels.rs  OperitChatArchive.rs  (+12 more)
core/crates/operit-runtime/src/plugins/: BundledExternalSkillAssets.rs  mod.rs
core/crates/operit-runtime/src/services/: ChatServiceCore.rs  mod.rs
core/crates/operit-runtime/src/ui/: mod.rs
core/crates/operit-runtime/src/util/: AndroidUserPathUtils.rs  AnrMonitor.rs  AppLogger.rs  ArchiveUtil.rs  AssetCopyUtils.rs  ChatMarkupRegex.rs  ChatUtils.rs  ColorQrCodeUtil.rs  CrashRecoveryState.rs  DocumentConversionUtil.rs  FFmpegUtil.rs  FileUtils.rs  GithubReleaseUtil.rs  GlobalExceptionHandler.rs  HtmlParserUtil.rs  HttpMultiPartDownloader.rs  ImageBitmapLimiter.rs  ImagePoolManager.rs  IntRangeSerializer.rs  LocalDateTimeSerializer.rs  LocaleUtils.rs  LocationUtils.rs  MarkdownRenderStream.rs  MediaBase64Limiter.rs  MediaPoolManager.rs  NetworkUtils.rs  OCRUtils.rs  OperitPaths.rs  PathMapper.rs  PortProcessKiller.rs  SerializationSetup.rs  SkillRepoZipPoolManager.rs  StreamingJsonXmlConverter.rs  StructuredAssistantContentParser.rs  TextSegmenter.rs  TokenCacheManager.rs  TtsCleaner.rs  TtsSegmenter.rs  UriSerializer.rs  WaifuMessageProcessor.rs  (+1 more)
core/crates/operit-store/: Cargo.toml
core/crates/operit-store/src/: PreferencesDataStore.rs  RuntimeStorageLayout.rs  RuntimeStorePaths.rs  SqliteStore.rs  lib.rs
hosts/android/: Cargo.toml
hosts/android/src/: filesystem.rs  http.rs  lib.rs  managed_runtime.rs  runtime_common.rs  runtime_storage.rs  system_operation.rs  terminal.rs  web_visit.rs
(+341 files in other folders)
