[package]
name = "operit-command-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
operit-runtime = { path = "../operit-runtime" }
operit-store = { path = "../operit-store" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["rt", "time"] }
