[package]
name = "operit-flutter-bridge"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
operit-core-proxy = { path = "../../../../core/crates/operit-core-proxy" }
operit-host-api = { path = "../../../../core/crates/operit-host-api" }
operit-link = { path = "../../../../core/crates/operit-link" }
operit-runtime = { path = "../../../../core/crates/operit-runtime" }
operit-store = { path = "../../../../core/crates/operit-store" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
hmac = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"
tokio = { version = "1", default-features = false, features = ["net", "rt-multi-thread", "sync"] }
uuid = { version = "1", features = ["v4"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
operit-host-android-native = { path = "../../../../hosts/android" }

[target.'cfg(windows)'.dependencies]
operit-host-windows-native = { path = "../../../../hosts/windows" }

[target.'cfg(target_os = "linux")'.dependencies]
operit-host-linux-native = { path = "../../../../hosts/linux" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
operit-host-web = { path = "../../../../hosts/web" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
